--- a/Client/package.json
+++ b/Client/package.json
@@ -1,7 +1,7 @@
 {
   "name": "product-react-project",
   "version": "0.1.0",
-  "proxy": "http://localhost:3001/",
+  "proxy": "http://localhost:8080",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.3.1",
