--- a/package.json
+++ b/package.json
@@ -10,24 +10,20 @@
     "express": "^4.17.1",
     "express-router": "0.0.1",
     "helmet": "^3.21.1",
+    "if-env": "^1.0.4",
     "morgan": "^1.9.1",
     "mysql": "^2.17.1",
-    "nodemon": "^1.19.2",
-    "react": "^16.8.6",
-    "react-bootstrap": "^1.0.0-beta.11",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "request": "^2.88.0"
+    "nodemon": "^1.19.2"
   },
   "scripts": {
-    "start": "npm run start:dev || npm run start:prod",
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "server": "nodemon server.js",
     "start:prod": "node server.js",
     "start:dev": "concurrently \"npm run server\" \"npm run client\"",
     "client": "cd Client && npm run start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "cd Client && npm run start",
+    "test": "cd tests && mocha",
+    "eject": "cd Client && npm run start"
   },
   "eslintConfig": {
     "extends": "react-app"
