--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "concurrently": "^4.1.2",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "fs": "0.0.1-security",
     "helmet": "^3.21.1",
     "if-env": "^1.0.4",
     "morgan": "^1.9.1",
